--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 /* 
 Plugin Name: WPAT
 Plugin URI: https://bestwebsite.com/wpat
-Description: A clean coded WordPress admin theme
+Description: A Best website WordPress admin theme
 Version: 1.9
 Author: BESTWEBSITE
 Author URI: https://bestwebsite.com
